--- a/src/FlightBody.css
+++ b/src/FlightBody.css
@@ -1,6 +1,6 @@
 .flight-body {
     width: 90%;
-    min-width: 400px;
+    min-width: 300px;
     max-width: 1100px;
     height: fit-content;
     max-height: 70%;
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    flex-direction: column;
 }
 .flight-body::after {
     content: "";
@@ -86,6 +87,7 @@
 
 .IF-num {
     width: 80px;
+    min-width: fit-content;
     margin-left: 10px;
     
 }
