--- a/src/Header.css
+++ b/src/Header.css
@@ -11,6 +11,6 @@
     align-items: center;
 }
 .header-body h4 {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
 }
